@@ -1,6 +1,8 @@
-package com.madou.geojcodesandbox.template.java;
+package com.madou.geojcodesandbox.template.code;
 
+import cn.hutool.core.date.StopWatch;
 import cn.hutool.core.io.FileUtil;
+import cn.hutool.core.util.StrUtil;
 import com.madou.geojcodesandbox.model.*;
 import com.madou.geojcodesandbox.model.enums.JudgeInfoMessageEnum;
 import com.madou.geojcodesandbox.model.enums.QuestionSubmitStatusEnum;
@@ -10,9 +12,11 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 
 import java.io.File;
+import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 
 /**
@@ -23,11 +27,23 @@ import java.util.UUID;
  * @date 2023/10/23 21:53:11
  */
 @Slf4j
-public class JavaCodeSandboxTemplate implements CodeSandbox {
+public abstract class CodeSandboxTemplate implements CodeSandbox {
 
-    private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
+    /**
+     * 代码语言类java，cpp
+     */
+    String prefix;
 
-    private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
+    /**
+     * 代码文件文件夹
+     */
+    String globalCodeDirPath;
+
+    /**
+     * 代码文件名
+     */
+    String globalCodeFileName;
+
 
     private static final long TIME_OUT = 5000L;
 
@@ -40,26 +56,33 @@ public class JavaCodeSandboxTemplate implements CodeSandbox {
         File userCodeFile;
 //        1. 把用户的代码保存为文件
         try {
-            userCodeFile  = saveCodeToFile(code);
+            userCodeFile = saveCodeToFile(code);
         } catch (Exception e) {
             return ExecuteCodeResponse.builder()
                     .status(QuestionSubmitStatusEnum.FAILED.getValue())
                     .message(JudgeInfoMessageEnum.SYSTEM_ERROR.getValue())
                     .build();
         }
-
+        //获取保存后的代码文件
+        String userCodePath = userCodeFile.getAbsolutePath();
+        String userCodeParentPath = userCodeFile.getParentFile().getAbsolutePath();
+        CodeSandboxCmd cmdFromLanguage = getCmd(userCodeParentPath, userCodePath);
+        String compileCmd = cmdFromLanguage.getCompileCmd();
+        String runCmd = cmdFromLanguage.getRunCmd();
 //        2. 编译代码，得到 class 文件
         try {
-            ExecuteResult compileFileExecuteMessage = compileFile(userCodeFile);
+            ExecuteResult compileFileExecuteMessage = compileFile(compileCmd);
             System.out.println(compileFileExecuteMessage);
             //编译已经失败了
-            if(compileFileExecuteMessage.getExitValue() != 0){
+            if (compileFileExecuteMessage.getExitValue() != 0) {
+                deleteFile(userCodeParentPath);
                 return ExecuteCodeResponse.builder()
                         .status(QuestionSubmitStatusEnum.COMPILE_FAILED.getValue())
                         .message(compileFileExecuteMessage.getErrorOutput())
                         .build();
             }
         } catch (Exception e) {
+            deleteFile(userCodeParentPath);
             return ExecuteCodeResponse.builder()
                     .status(QuestionSubmitStatusEnum.COMPILE_FAILED.getValue())
                     .message(e.toString())
@@ -69,10 +92,10 @@ public class JavaCodeSandboxTemplate implements CodeSandbox {
         // 3. 执行代码，得到输出结果
         List<ExecuteResult> executeMessageList = null;
         try {
-            executeMessageList = runFile(userCodeFile, inputList);
+            executeMessageList = runFile(runCmd, inputList);
             ExecuteResult executeMessage = executeMessageList.get(executeMessageList.size() - 1);
             //执行报错
-            if (StringUtils.isNotBlank(executeMessage.getErrorOutput())){
+            if (StringUtils.isNotBlank(executeMessage.getErrorOutput())) {
                 return ExecuteCodeResponse.builder()
                         .status(QuestionSubmitStatusEnum.FAILED.getValue())
                         .message(executeMessage.getErrorOutput())
@@ -89,12 +112,22 @@ public class JavaCodeSandboxTemplate implements CodeSandbox {
         ExecuteCodeResponse outputResponse = getOutputResponse(executeMessageList);
 
 //        5. 文件清理
-        boolean b = deleteFile(userCodeFile);
+        boolean b = deleteFile(userCodeParentPath);
         if (!b) {
             log.error("deleteFile error, userCodeFilePath = {}", userCodeFile.getAbsolutePath());
         }
         return outputResponse;
     }
+
+
+    /**
+     * 每个实现类必须实现编译以及运行的cmd
+     *
+     * @param userCodeParentPath 代码所在的父目录
+     * @param userCodePath       代码所在目录
+     * @return {@link CodeSandboxCmd}
+     */
+    public abstract CodeSandboxCmd getCmd(String userCodeParentPath, String userCodePath);
 
     /**
      * 1. 把用户的代码保存为文件
@@ -104,15 +137,15 @@ public class JavaCodeSandboxTemplate implements CodeSandbox {
      */
     public File saveCodeToFile(String code) {
         String userDir = System.getProperty("user.dir");
-        String globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
+        String globalCodePathName = userDir + globalCodeDirPath;
         // 判断全局代码目录是否存在，没有则新建
         if (!FileUtil.exist(globalCodePathName)) {
             FileUtil.mkdir(globalCodePathName);
         }
 
         // 把用户的代码隔离存放
-        String userCodeParentPath = globalCodePathName + File.separator + UUID.randomUUID();
-        String userCodePath = userCodeParentPath + File.separator + GLOBAL_JAVA_CLASS_NAME;
+        String userCodeParentPath = globalCodePathName + prefix + File.separator + UUID.randomUUID();
+        String userCodePath = userCodeParentPath + File.separator + globalCodeFileName;
         File userCodeFile = FileUtil.writeString(code, userCodePath, StandardCharsets.UTF_8);
         return userCodeFile;
     }
@@ -120,11 +153,10 @@ public class JavaCodeSandboxTemplate implements CodeSandbox {
     /**
      * 2、编译代码
      *
-     * @param userCodeFile
+     * @param compileCmd
      * @return
      */
-    public ExecuteResult compileFile(File userCodeFile) {
-        String compileCmd = String.format("javac -encoding utf-8 %s", userCodeFile.getAbsolutePath());
+    public ExecuteResult compileFile(String compileCmd) {
         try {
             Process compileProcess = Runtime.getRuntime().exec(compileCmd);
             ExecuteResult executeMessage = ProcessUtils.runProcessAndGetMessage(compileProcess, "编译");
@@ -140,37 +172,58 @@ public class JavaCodeSandboxTemplate implements CodeSandbox {
     /**
      * 3、执行文件，获得执行结果列表
      *
-     * @param userCodeFile
+     * @param runCmd
      * @param inputList
      * @return
      */
-    public List<ExecuteResult> runFile(File userCodeFile, List<String> inputList) {
-        String userCodeParentPath = userCodeFile.getParentFile().getAbsolutePath();
-
-        List<ExecuteResult> executeMessageList = new ArrayList<>();
-        for (String inputArgs : inputList) {
-//            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
-            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
+    public List<ExecuteResult> runFile(String runCmd, List<String> inputList) {
+        // 3. 执行代码，得到输出结果
+        List<ExecuteResult> executeResults = new ArrayList<>();
+        for (String input : inputList) {
+            //Linux下的命令
+//            String runCmd = String.format("/software/jdk1.8.0_301/bin/java -Xmx256m -Dfile.encoding=UTF-8 -cp %s:%s -Djava.security.manager=%s Main", dir, SECURITY_MANAGER_PATH, SECURITY_MANAGER_CLASS_NAME);
+            //Windows下的命令
+            // String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main", dir, SECURITY_MANAGER_PATH, SECURITY_MANAGER_CLASS_NAME);
+            StopWatch stopWatch = new StopWatch();
+            stopWatch.start();
             try {
                 Process runProcess = Runtime.getRuntime().exec(runCmd);
                 // 超时控制
-                new Thread(() -> {
+                Thread thread = new Thread(() -> {
                     try {
                         Thread.sleep(TIME_OUT);
-                        System.out.println("超时了，中断");
+                        //超时了
                         runProcess.destroy();
                     } catch (InterruptedException e) {
                         throw new RuntimeException(e);
                     }
-                }).start();
-                ExecuteResult executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
-                System.out.println(executeMessage);
-                executeMessageList.add(executeMessage);
-            } catch (Exception e) {
-                throw new RuntimeException("执行错误", e);
+                });
+                thread.start();
+
+                ExecuteResult executeResult = null;
+                try {
+                    executeResult = ProcessUtils.runProcessAcmAndGetMessage(runProcess, input);
+                } catch (IOException e) {
+                    log.error("执行出错: {}", e.toString());
+                }
+                stopWatch.stop();
+                if (!thread.isAlive()) {
+                    executeResult = new ExecuteResult();
+                    executeResult.setTime(stopWatch.getLastTaskTimeMillis());
+                    executeResult.setErrorOutput("超出时间限制");
+                }
+                executeResults.add(executeResult);
+
+                //已经有用例失败了
+                if (StrUtil.isNotBlank(Objects.requireNonNull(executeResult).getErrorOutput())) {
+                    break;
+                }
+            } catch (IOException e) {
+                throw new RuntimeException(e);
             }
+
         }
-        return executeMessageList;
+        return executeResults;
     }
 
     /**
@@ -189,12 +242,11 @@ public class JavaCodeSandboxTemplate implements CodeSandbox {
     /**
      * 5、删除文件
      *
-     * @param userCodeFile
+     * @param userCodeParentPath
      * @return
      */
-    public boolean deleteFile(File userCodeFile) {
-        if (userCodeFile.getParentFile() != null) {
-            String userCodeParentPath = userCodeFile.getParentFile().getAbsolutePath();
+    public boolean deleteFile(String userCodeParentPath) {
+        if (userCodeParentPath != null) {
             boolean del = FileUtil.del(userCodeParentPath);
             System.out.println("删除" + (del ? "成功" : "失败"));
             return del;
